application-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: application-service
spec:
  type: ClusterIP
  selector:
    app: application-service
  ports:
    - port: 80
      targetPort: 8080
